# ScattBO

./: .gitignore  README.md  ScatBO_MultiObjective - work in progress.ipynb  ScatBO_SingleObjective.ipynb  ScattBO.md  benchmark.py  pyproject.toml  requirements.txt  setup.cfg
Data/Fq/: Target_Fq_benchmark.npy
Data/Gr/: Experimental_PDF.gr  Target_PDF_benchmark.npy
Data/Iq/: Target_Iq_benchmark.npy
Data/SAXS/: Target_SAXS_benchmark.npy
Data/Sq/: Experimental_Sq.sq  Experimental_Sq_original.sq  Target_Sq_benchmark.npy
presentation/: Poster_ScattBO2024.pptx
results/bruteforce/: result_experimental_Gr_fast_StructureSpace.json  result_experimental_Sq_SynthesisSpace.json  result_experimental_Sq_fast_StructureSpace.json  result_simulated_Gr_fast_StructureSpace.json  result_simulated_Sq_fast_StructureSpace.json
results/dragonfly/: history_experimental_Gr_large-dragonfly.pkl  history_experimental_Gr_small-dragonfly.pkl  history_experimental_Sq_large-dragonfly.pkl  history_experimental_Sq_small-dragonfly.pkl  history_experimental_both_large-dragonfly.pkl  history_experimental_both_small-dragonfly.pkl  history_simulated_Gr_large-dragonfly.pkl  history_simulated_Gr_small-dragonfly.pkl  history_simulated_Sq_large-dragonfly.pkl  history_simulated_Sq_small-dragonfly.pkl  history_simulated_both_large-dragonfly.pkl  history_simulated_both_small-dragonfly.pkl
tools/: BruteForce_StructureSpace.py  BruteForce_StructureSpace_fast.py  BruteForce_SynthesisSpace.py  GenerateScatteringPatterns.ipynb  GenerateScatteringPatterns.py  VisualiseBruteForce.ipynb
utils/: ScattBO.py
(+20 files in other folders)
