[build-system]
requires = ["setuptools<=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ScattBO"
version = "0.0.1"
description = "..."
readme = "README.md"
authors = [{name="Andy S. Anker"}, {name="Miguel González-Duque"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ase",
    "debyecalculator",
    "bayesian-optimization",
    "plotly",
    "scikit-optimize",
    "pydantic"
]

[project.optional-dependencies]
dev = ["black", "tox", "pytest"]

[tool.isort]
profile = "black"
