[metadata]
name = ScattBO
version = 0.0.1
description = ScattBO
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
include_package_data = True
